--- a/samplenews/build.gradle
+++ b/samplenews/build.gradle
@@ -19,6 +19,12 @@ android {
     }
 }
 
+repositories{
+    flatDir{
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -26,4 +32,8 @@ dependencies {
     compile files('libs/ApiStoreSDK1.0.4.jar')
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile files('libs/volley.jar')
+    compile name:'SMSSDK-2.1.1',ext:'aar'
+    compile name:'SMSSDKGUI-2.1.1',ext:'aar'
+    compile files('libs/MobCommons-2016.0714.1402.jar')
+    compile files('libs/MobTools-2016.0714.1402.jar')
 }
